-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.6.0, Lustre 2.4.2, Lustre 2.7.0, Lustre 2.4.3, Lustre 2.8.0
-
3
-
11318
This issue was created by maloo for wangdi <di.wang@intel.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/794b62ea-40b4-11e3-af95-52540035b04c.
The sub-test test_smoke failed with the following error:
Total 1 error nodes in c
Total 3 error nodes in s
lnet-selftest test_smoke: @@@@@@ FAIL: lst Error found
Info required for matching: lnet-selftest smoke
- is related to
-
LU-8705 fix lnet-selftest to be not skipped on DNE
-
- Resolved
-