lustre/tests/lnet-selftest.sh
@@ -56,9 +56,10 @@ fi
 # 2) it's theoretically possible that lst tests congest comm paths so tightly
 # that mounted lustre wouldn't able to perform some of its background activities
 if is_mounted $MOUNT || is_mounted $MOUNT2; then
-    local_mode && CLIENTONLY=yes
-    stopall
-    RESTORE_MOUNT=yes
+	local_mode && CLIENTONLY=yes
+	RESTORE_MOUNT=yes
+	LOAD_MODULES_REMOTE=true
+	cleanupall
 fi
 
 build_test_filter
